<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_transformers</name>
  <version>1.0.0</version>
  <description>Collection of ROS nodes wrapping around various huggingface transformers</description>
  <maintainer email="ros@bob.de">BobRos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>bob_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
